# deviceid

./: .gitignore  Cargo.toml  LICENSE  README.md  devenv.nix  index.d.ts  index.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml
__test__/: deviceid.test.mjs
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: lib.rs
