[package]
name = "deviceid"
version = "0.1.0"
edition = "2024"
description = "A device ID that can't be faked: the fingerprint of a key your hardware holds"
license = "MIT"
repository = "https://github.com/arcboxlabs/deviceid"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22.1"
hardware-enclave = { version = "0.2.10", features = ["signing"] }
napi = "3"
napi-derive = "3"
p256 = "0.13.2"
sha2 = "0.11.0"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
