[package]
name = "deviceid"
version = "0.1.0"
edition = "2024"
description = "A device ID that can't be faked: the fingerprint of a key your hardware holds"
license = "MIT"
repository = "https://github.com/arcboxlabs/deviceid"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22.1"
# `keyring-storage` unlocks the Linux Secret Service backend; without it,
# non-WSL Linux has no signer at all.
hardware-enclave = { version = "0.2.10", features = ["signing", "keyring-storage"] }
napi = "3"
napi-derive = "3"
p256 = "0.13.2"
sha2 = "0.11.0"

[features]
# CI-only: software mock backend (activated at runtime by
# ENCLAVEAPP_MOCK_STORAGE=1) for platforms whose hardware cannot exist in a
# VM runner (macOS Secure Enclave). Never enabled in release artifacts.
mock = ["hardware-enclave/mock"]

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
